Fixed Particle Settings not showing

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300');
+
 body {
     margin: 0;
     padding: 0;
@@ -5,7 +7,9 @@ body {
 }
 
 body * {
-    font-family: 'Major Mono Display', monospace;
+    font-family: 'Roboto Mono', monospace;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 canvas {
